# BSUIR

./: .gitignore  README.md
Semester_1/KPIYAP/Lab_3/: Lab_3.cpp
Semester_1/KPIYAP/Lab_4/: Lab_4.cpp  Lab_4.sln  Lab_4.vcxproj  Lab_4.vcxproj.filters
Semester_1/KPIYAP/Lab_5/: Lab_5.cpp  Lab_5.sln  Lab_5.vcxproj  Lab_5.vcxproj.filters
Semester_1/KPIYAP/Lab_6/: Lab_6.cpp  Lab_6.sln  Lab_6.vcxproj  Lab_6.vcxproj.filters
Semester_1/KPIYAP/Lab_7/: Lab_7.cpp  Lab_7.sln  (+2 more)
Semester_3/KPIYAP/Lab_11/: CMakeLists.txt  main.cpp
Semester_3/Сourse work/: Diary.pro  Images.qrc  README.md  button.cpp  calculator.cpp  confirm.cpp  confirm.h  confirm.ui  contacts.cpp  contacts.h  contacts.ui  dbcon.cpp  dbcon.h  diary.cpp  diary.h  diary.ui  form.ui  login.cpp  login.h  login.ui  main.cpp  register.cpp  register.h  register.ui  tetrixboard.cpp  tetrixwindow.cpp  tetrixwindow.h
Semester_4/KPP/: README.md
Semester_6/AKSIS/: aksis-lab2.pkt  aksis-lab3.pkt  aksis-lab5.pkt  Практическая 2.1 (общая-9.1.4.8).docx  Практическая 2.2. (3 топол)9.1.4.9.docx  Практическая 2.3 (VLSM)9.2.1.4.docx
Semester_6/Kursach/: Филиппович записка.docx
Semester_6/SA/: СА, ЛР № 1.pages  СА, ЛР № 2.pages  СА_Лаб_практикум_принятие_решений.doc  Титул СА.docx
Semester_6/cosii/: main.js  main.py
Semester_7/AOKS/: test.pkt
Semester_7/COSII/: Условие 1, 2.doc
Semester_7/Kursach/: .$А4_Филиппович_Структурная_СКС.drawio.bkp  Functional.drawio  MAIN Пояснительная записка.docx  А4_Филиппович_Структурная_СКС.drawio  Вариант.docx  Заявление_на_утверждение_темы_дипломного_проекта.docx  СОДЕРЖАНИЕ.docx
(+2552 files in other folders)
