cmake_minimum_required(VERSION 3.20)
project(labWork11)

set(CMAKE_CXX_STANDARD 14)

add_executable(labWork11
        main.cpp
        Vehicle.cpp
        Vehicle.h
        Train.cpp
        Train.h
        Locomotive.cpp
        Locomotive.h
        Driver.cpp
        Driver.h
        functions.cpp
        functions.h
        RailwayCarriage.cpp
        RailwayCarriage.h
        Conductor.cpp
        Conductor.h
        namespace.h
        )

